--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,10 @@ authors = ["Brian Parbhu"]
 version = "0.1.0"
 
 [deps]
+Calendars = "2e69b1bb-2c9c-41e6-ab4b-04f4c0f206b8"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+PkgSkeleton = "d254efa0-af53-535e-b7f1-03c1c9fbcbe7"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
+Plotly = "58dd65bb-95f3-509e-9936-c39a10fdeae7"
 Stan = "682df890-35be-576f-97d0-3d8c8b33a550"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
