--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 Calendars = "2e69b1bb-2c9c-41e6-ab4b-04f4c0f206b8"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 PkgSkeleton = "d254efa0-af53-535e-b7f1-03c1c9fbcbe7"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
