--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Brian Parbhu"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Calendars = "2e69b1bb-2c9c-41e6-ab4b-04f4c0f206b8"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
